# dynamic-config-manager

./: .gitignore  AGENT.md  PROGRESS.md  README.md  developer_spec.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: ci.yml
docs/: api_reference.md  full_specification.md  user_guide.md
docs/implementation_plans/completed/: field_names_api_ticket.md  metadata_enhancement_ticket.md
dynamic_config_manager/: __init__.py  _version.py  cli.py  helpers.py  manager.py  manager2.py  models.py  validation.py  watchers.py
examples/: field_names_example.py  metadata_enhancement_demo.py
tests/: test_basic.py  test_extra.py  test_field_names_api.py  test_metadata.py  test_validation.py  test_watchers.py
