[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-config-manager" # Distribution name for 'pip install'
description = "A singleton manager for handling multiple typed configuration sets using Pydantic/Pydantic-Settings."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dynamic = ["dependencies", "version"]

[tool.setuptools]
packages = ["dynamic_config_manager"]

[tool.setuptools.dynamic]
version = {attr = "dynamic_config_manager._version.__version__"} # Dynamically set version from _version.py
dependencies = {file = ["requirements.txt"]} # Read dependencies from requirements.txt

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
toml = ["tomli>=2.0", "tomli-w>=1.0"]
watch = ["watchfiles>=0.20"]
all = [
  "PyYAML>=6.0",
  "tomli>=2.0", "tomli-w>=1.0",
  "watchfiles>=0.20"
]
ci = [
  "PyYAML>=6.0",
  "tomli>=2.0", "tomli-w>=1.0",
  "watchfiles>=0.20",
  "pytest",
  "flake8"
]

# --- Optional Sections (Commented Out) which we may use later ---

[project.scripts]
dcm-cli = "dynamic_config_manager.cli:main"

# [tool.setuptools.package-data]
# "dynamic_config_manager" = ["*.json", "data/*.json"] # For later package-data